--- a/apps/web/src/app.html
+++ b/apps/web/src/app.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="%paraglide.lang%">
+<html data-theme="cerberus" 1lang="%paraglide.lang%">
 	<head>
 		<title>Tytuł</title>
 		<meta charset="utf-8" />
