save state before trying to fix tailwind intellisense

--- a/apps/web/src/app.html
+++ b/apps/web/src/app.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html data-theme="cerberus" lang="%paraglide.lang%">
+<html data-theme="resto-rate-theme" lang="%paraglide.lang%">
 	<head>
 		<title>Tytuł</title>
 		<meta charset="utf-8" />
