--- a/apps/web/src/app.html
+++ b/apps/web/src/app.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html data-theme="resto-rate-theme" lang="%paraglide.lang%">
 	<head>
-		<title>Tytuł</title>
+		<title>Resto Rate</title>
 		<meta charset="utf-8" />
 		<link rel="icon" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
